ready for pilot

--- a/psiturk/templates/quiz.html
+++ b/psiturk/templates/quiz.html
@@ -22,7 +22,7 @@
                 <option value="noresp" SELECTED></option>
             		<option value="a">At the beginning of each instance, targets are indicated in blue</option>
             		<option value="b">The number of dots in each instance remains the same</option>
-            		<option value="c">The task is to indicate which dots are targets</option>
+            		<option value="c">The main task is to indicate which dots are targets</option>
               </select>
               </p>
             </div>
@@ -32,9 +32,9 @@
                   Which of the following statements is <b>false</b>:
               <select id="trueFalse2" name="constantObj">
                 <option value="noresp" SELECTED></option>
-                <option value="a">You can select multiple targets by holding down left mouse key and dragging the cursor over the targets</option>
+                <option value="a">The secondary task is to indicate how difficult it was to track all 4 targets</option>
                 <option value="b">Maintain an arm-length distance from your monitor</option>
-                <option value="c">You can't deselect targets that are already selected</option>
+                <option value="c">The dots on the screen remain stationary</option>
               </select>
               </p>
             </div>
